Completed header styling. I ended up making the app tray icon from scratch!

--- a/index.html
+++ b/index.html
@@ -8,21 +8,38 @@
 
 <body>
     <header>
-        <a href="mail.google.com">Gmail</a>
-        <a href="images.google.com">Images</a>
-        <button id="trayicon"></button>
-        <button class="roundedbutton" id="signin"></button>
+        <a class="Gmail hlink" href="mail.google.com">Gmail</a>
+        <a class="hlink" href="images.google.com">Images</a>
+        <button id="trayiconbutton">
+            <div id="trayicon">
+            <!--time to do something dumb-->
+            <div class="graybox"></div>
+            <div class="graybox"></div>
+            <div class="graybox"></div>
+            <div class="graybox"></div>
+            <div class="graybox"></div>
+            <div class="graybox"></div>
+            <div class="graybox"></div>
+            <div class="graybox"></div>
+            <div class="graybox"></div>
+            <!--oh god-->
+        </div>
+        </button>
+        <button class="roundedbutton" id="signin">Sign in</button>
     </header>
 
     <div id="centergrid">
-        <img href="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+        <img href="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+            alt="Google Logo">
         <div id="searchbar">
             <div class="rounded-left">
-                <img href="https://f0.pngfuel.com/png/648/874/magnifying-glass-computer-icons-magnifying-glass-png-clip-art.png" alt="Search">
+                <img href="https://f0.pngfuel.com/png/648/874/magnifying-glass-computer-icons-magnifying-glass-png-clip-art.png"
+                    alt="Search">
             </div>
             <input id="searchbar-input" type="text"></input>
             <div class="rounded-right">
-                <img href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/1200px-Google_mic.svg.png" alt="Search by voice">
+                <img href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/1200px-Google_mic.svg.png"
+                    alt="Search by voice">
             </div>
         </div>
         <button class="roundedbutton">Google Search</button>
@@ -31,9 +48,12 @@
 
     <footer>
         <div class="left">
-            <a href="https://www.google.com/intl/en_il/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
-            <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a>
-            <a href="https://about.google/?utm_source=google-IL&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a>
+            <a
+                href="https://www.google.com/intl/en_il/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+            <a
+                href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a>
+            <a
+                href="https://about.google/?utm_source=google-IL&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a>
             <a href="https://google.com/search/howsearchworks/?fg=1">How Search works</a>
         </div>
         <div class="right">
